1.style & layout 2.backend setup 3.balldontlie.io API to own API

--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "vue": "^2.6.14",
-    "vue-hot-reload-api": "^2.3.4"
+    "vue-hot-reload-api": "^2.3.4",
+    "vue2-timepicker": "^1.1.6"
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.2.2",
