--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.4",
     "vue": "^2.6.14",
     "vue-hot-reload-api": "^2.3.4",
     "vue2-timepicker": "^1.1.6"
