--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,7 @@
   "dependencies": {
     "axios": "^0.21.4",
     "vue": "^2.6.14",
-    "vue-hot-reload-api": "^2.3.4",
-    "vue2-timepicker": "^1.1.6"
+    "vue-hot-reload-api": "^2.3.4"
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.2.2",
