--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validation": "^3.0.8",
     "firebase": "^9.0.2",
+    "joi": "^17.4.2",
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
